--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="/icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>星辰浏览器</title>
+    <title>鸡米花浏览器</title>
     <style>
       * {
         margin: 0;
